--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!--link rel="icon" href="<%= BASE_URL %>favicon.ico"-->
     <title>tpm</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-size: 14px;
+      }
+    </style>
   </head>
-  <body>
-    <noscript>
+  <body style="margin:0;padding:0;">
+    <!--noscript>
       <strong>We're sorry but tpm doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
